integration test for live interaction in plugin