@@ -26,8 +26,32 @@
             <dependencies>
                 <dependency>
                     <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>dynamodb-enhanced</artifactId>
+                    <version>2.20.33</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>dynamodb</artifactId>
+                    <version>2.20.32</version> <!-- Use the latest version -->
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>auth</artifactId>
+                    <version>2.20.32</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>sdk-core</artifactId>
+                    <version>2.20.32</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
                     <artifactId>s3</artifactId>
-                    <version>2.28.18</version>
+                    <version>2.20.32</version>
                 </dependency>
                 <dependency>
                     <groupId>dev.jorel</groupId>
@@ -99,6 +123,18 @@
                     <version>5.9.0</version>
                     <scope>test</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-suite</artifactId>
+                    <version>1.11.2</version>
+                    <scope>test</scope>
+                </dependency>
             </dependencies>
         </profile>
         <profile>
@@ -108,9 +144,38 @@
             </properties>
             <dependencies>
                 <dependency>
+                    <groupId>org.apache.httpcomponents.client5</groupId>
+                    <artifactId>httpclient5</artifactId>
+                    <version>5.1.3</version>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>dynamodb-enhanced</artifactId>
+                    <version>2.20.33</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>dynamodb</artifactId>
+                    <version>2.20.32</version> <!-- Use the latest version -->
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>auth</artifactId>
+                    <version>2.20.32</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>sdk-core</artifactId>
+                    <version>2.20.32</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
                     <groupId>software.amazon.awssdk</groupId>
                     <artifactId>s3</artifactId>
-                    <version>2.28.18</version>
+                    <version>2.20.32</version>
                 </dependency>
                 <dependency>
                     <groupId>dev.jorel</groupId>
@@ -172,6 +237,19 @@
                     <version>5.9.0</version>
                     <scope>test</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-suite</artifactId>
+                    <version>1.11.2</version>
+                    <scope>test</scope>
+                </dependency>
+
             </dependencies>
 
             <build>
@@ -222,7 +300,24 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.1.2</version>
             <configuration>
+                <argLine>--enable-preview</argLine>
                 <testFailureIgnore>true</testFailureIgnore>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.1.2</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>integration-test</goal>
+                        <goal>verify</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <argLine>--enable-preview</argLine>
             </configuration>
         </plugin>
       <plugin>
